[gd_scene load_steps=11 format=3 uid="uid://p5amiltpu8h1"]

[ext_resource type="Script" uid="uid://dnaua8g451nxt" path="res://scripts/NPCController.gd" id="1_slm4e"]
[ext_resource type="Script" uid="uid://c4rwnd7q5nv7x" path="res://scripts/NPCData.gd" id="2_h6w2b"]
[ext_resource type="Texture2D" uid="uid://cl1hev1iq81qs" path="res://npc.png" id="2_we7f3"]
[ext_resource type="Script" uid="uid://bxb4vl8qgia6q" path="res://scripts/NPCStateMachine.gd" id="3_we7f3"]
[ext_resource type="Script" uid="uid://dxpfa1rjxg3l7" path="res://scripts/IdleState.gd" id="4_rxikf"]
[ext_resource type="Script" uid="uid://byhsr6ear0yeh" path="res://scripts/MovingState.gd" id="5_bnyoo"]
[ext_resource type="Script" uid="uid://itvhv2ptkwod" path="res://scripts/InteractingState.gd" id="6_5t8s8"]
[ext_resource type="Script" uid="uid://cb4qevuqkmlxl" path="res://scripts/NPCDebugInfo.gd" id="7_gmbj5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jiysx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rwfh4"]
radius = 1.0

[node name="Npc" type="CharacterBody2D"]
script = ExtResource("1_slm4e")

[node name="NPCVisuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="NPCVisuals"]
texture = ExtResource("2_we7f3")

[node name="NameLabel" type="Label" parent="NPCVisuals"]
offset_left = 5.0
offset_top = -30.0
offset_right = 6.0
offset_bottom = -7.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_jiysx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rwfh4")

[node name="NPCData" type="Node" parent="."]
script = ExtResource("2_h6w2b")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_we7f3")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_rxikf")

[node name="MovingState" type="Node" parent="StateMachine"]
script = ExtResource("5_bnyoo")

[node name="InteractingState" type="Node" parent="StateMachine"]
script = ExtResource("6_5t8s8")

[node name="DebugInfo" type="Node2D" parent="."]
script = ExtResource("7_gmbj5")

[node name="DebugLabel" type="Label" parent="DebugInfo"]

[node name="NeedsBars" type="VBoxContainer" parent="DebugInfo"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
